--- a/html/login.html
+++ b/html/login.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<title>Login Page</title>
 	<script src="../js/jquery-1.9.1.min.js"></script>
+	<!-- Google reCAPTCHA -->
+	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 	<div id="l_header" class="l_header">
@@ -88,6 +90,8 @@
 				<input type="text" value="" name="" id="" placeholder="username"><span class="o_tips"></span>tips:error<br>
 				<label for="">password :</label>
 				<input type="password" value="" name="" id="" placeholder="password"><span class=o_"tips">tips:error</span><br>
+				<!-- Google reCAPTCHA -->
+				<div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div>
 				<input type="reset" value="reset" name="" id="">
 				<input type="submit" value="submit" name="" id=""><br>
 			</form>
