--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- CDN 加速 -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
@@ -12,7 +13,8 @@
 	<title>Login Page</title>
 	<script src="../js/jquery-1.9.1.min.js"></script>
 	<!-- Google reCAPTCHA -->
-	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
+	<script src="../js/recaptcha/api.js"></script>
 </head>
 <body>
 	<div id="l_header" class="l_header">
