enctype="multipart/form-data"
enctype="multipart/form-data"

https://www.w3.org/TR/html51/sec-forms.html#forms-form-submission

--- a/html/login.html
+++ b/html/login.html
@@ -30,7 +30,7 @@
 	    <hr>
 		<label for="">login</label>
 		<div class="login_form" id="login_form">
-			<form id="l_form" class="l_form" action="../php/login.php" method="post">
+			<form id="l_form" class="l_form" action="../php/login.php" method="post" enctype="multipart/form-data">
 			    <label for="">identity:</label>
 			    <select name="identity" id="identity">
 			    	<option value="student" selected="">student</option>
