--- a/html/login.html
+++ b/html/login.html
@@ -93,7 +93,11 @@
 				<label for="">password :</label>
 				<input type="password" value="" name="" id="" placeholder="password"><span class=o_"tips">tips:error</span><br>
 				<!-- Google reCAPTCHA -->
-				<div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div>
+				<!-- http://www.xgqfms.xyz -->
+				<!-- <div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div> -->
+				<!-- http://xgqfrms.github.io -->
+				<div class="g-recaptcha" data-sitekey="6LfvZhETAAAAAOXbzownbgNtar4emmcfjQ7f7C9I"></div>
+
 				<input type="reset" value="reset" name="" id="">
 				<input type="submit" value="submit" name="" id=""><br>
 			</form>
