<!-- http://xgqfrms.github.io/new -->
<!-- http://xgqfrms.github.io/new -->

--- a/html/login.html
+++ b/html/login.html
@@ -95,8 +95,10 @@
 				<!-- Google reCAPTCHA -->
 				<!-- http://www.xgqfms.xyz -->
 				<!-- <div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div> -->
-				<!-- http://xgqfrms.github.io -->
-				<div class="g-recaptcha" data-sitekey="6LfvZhETAAAAAOXbzownbgNtar4emmcfjQ7f7C9I"></div>
+				<!-- http://xgqfrms.github.io/DataStructure -->
+				<!-- <div class="g-recaptcha" data-sitekey="6LfvZhETAAAAAOXbzownbgNtar4emmcfjQ7f7C9I"></div> -->
+				<!-- http://xgqfrms.github.io/new -->
+				<div class="g-recaptcha" data-sitekey="6LdPkRsTAAAAACuWpUuxF-klz8Cbq1GLR5nWjiR_"></div>
 
 				<input type="reset" value="reset" name="" id="">
 				<input type="submit" value="submit" name="" id=""><br>
