<!-- <script src="../js/recaptcha/api.js"></script> -->
<script src='https://www.google.com/recaptcha/api.js'></script>

--- a/html/login.html
+++ b/html/login.html
@@ -13,8 +13,8 @@
 	<title>Login Page</title>
 	<script src="../js/jquery-1.9.1.min.js"></script>
 	<!-- Google reCAPTCHA -->
-	<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
-	<script src="../js/recaptcha/api.js"></script>
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<!-- <script src="../js/recaptcha/api.js"></script> -->
 </head>
 <body>
 	<div id="l_header" class="l_header">
