--- a/html/login.html
+++ b/html/login.html
@@ -18,8 +18,21 @@
 </head>
 <body>
 	<div id="l_header" class="l_header">
-		<a href="#">logo</a>
-		banner
+		<div class="h_logo L_float">
+			<a href="#"><img class="logo_img" src="../images/DS_class.png" alt="logo"></a>
+		</div>
+		<div class="h_link L_float">
+			<a href="#" class="a_item">Home</a>
+			<a href="#" class="a_item">Course</a>
+			<a href="#" class="a_item">Learning</a>
+			<a href="#" class="a_item">Resource</a>
+		</div>
+		<div class="ll_link L_float">
+			<a href="#" class="s_item1">login</a>
+			<a href="#" class="s_item2">register</a>
+			<a href="#" class="s_item3">help</a>
+		</div>
+		<hr>
 	</div>
 	<div class="container_login" id="container_login">
 	    <div class="a_link" id="a_link">
@@ -59,7 +72,7 @@
 			    <div class="all_validation" id="all_validation">
 			    	<label for="" id="l_item">Google :</label><br>
 			    	<a href="http://www.cnblogs.com/xgqfrms/p/4981621.html">Are you a robot? Introducing “No CAPTCHA reCAPTCHA”</a><br>
-			    	<img src="../images/google.gif" alt="google.gif">
+			    	<img src="../images/google.gif" alt="google.gif"><br>
 			    	<label for="" id="l_item">SMS :</label><br>
 			    	<a href="#">SMS validation</a><br>
 			    	<img src="../images/win10.gif" alt="../images/win10.gif">
@@ -94,11 +107,11 @@
 				<input type="password" value="" name="" id="" placeholder="password"><span class=o_"tips">tips:error</span><br>
 				<!-- Google reCAPTCHA -->
 				<!-- http://www.xgqfms.xyz -->
-				<!-- <div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div> -->
+				<div class="g-recaptcha" data-sitekey="6Lf7fxsTAAAAADEcxnWU0KeKpkXWiykhDpaGYbcF"></div>
 				<!-- http://xgqfrms.github.io/DataStructure -->
 				<!-- <div class="g-recaptcha" data-sitekey="6LfvZhETAAAAAOXbzownbgNtar4emmcfjQ7f7C9I"></div> -->
 				<!-- http://xgqfrms.github.io/new -->
-				<div class="g-recaptcha" data-sitekey="6LdPkRsTAAAAACuWpUuxF-klz8Cbq1GLR5nWjiR_"></div>
+				<!-- <div class="g-recaptcha" data-sitekey="6LdPkRsTAAAAACuWpUuxF-klz8Cbq1GLR5nWjiR_"></div> -->
 
 				<input type="reset" value="reset" name="" id="">
 				<input type="submit" value="submit" name="" id=""><br>
