--- a/index.html
+++ b/index.html
@@ -13,8 +13,49 @@
 	<script src="js/jquery-1.9.1.min.js"></script>
 </head>
 <body>
+    <div class="i_header">
+    	<div class="h_logo">
+    		<img class="img_diamond" src="images/diamond.gif" alt="diamond.gif">
+    	</div>
+    	<div class="h_n_link">
+    		<a href="#" class="a_link0">Home :</a><span> >> </span>
+    		<a href="#" class="a_link1">index </a><span>&nbsp;</span>
+    	</div>
+    	<div class="h_l_link">
+    		<a href="#" class="a_link2">login </a><span>&nbsp;</span>
+    		<a href="#" class="a_link3">register </a><span>&nbsp;</span>
+    		<a href="#" class="a_link4">help </a><span>&nbsp;</span>
+    		<a href="#" class="a_link5"></a>
+    	</div>
+    </div>
 	<div class="container">
 		<p>testing...</p>
+		<div class="s_section s_item1">
+			<section>
+				<span>testing</span>
+			</section>
+		</div>
+		<div class="s_section s_item2">
+			<section>
+				<span>testing</span>
+			</section>
+		</div>
+		<div class="s_section s_item3">
+			<section>
+				<span>testing</span>
+			</section>
+		</div>
+	</div>
+	<div class="i_footer">
+		<p>Copyright @ xgqfrms 2012-2016</p>
+	</div>
+	<div class="d_js">
+		<script>
+			var x = document.getElementById("");
+			function y (){
+				alert("hello world!");
+			};
+		</script>
 	</div>
 </body>
 </html>
