cgi.form.tr error

--- a/html/register.html
+++ b/html/register.html
@@ -212,7 +212,7 @@
 				 -->
 			</div>
 		</form>
-		<form action="products.cgi" method="post" enctype="multipart/form-data">
+		<!-- <form action="products.cgi" method="post" enctype="multipart/form-data">
 		  <table>
 		  <tr> <th> Product ID <th> Product name <th> Price <th> Action
 		  <tr>
@@ -233,7 +233,7 @@
 		  </table>
 		  <p> <button formnovalidate="formnovalidate" name="action" value="add">Add</button> </p>
 		  <p> <button name="action" value="update">Save</button> </p>
-		</form>
+		</form> -->
 	</div>
 	<!-- https://www.w3.org/TR/html51/sec-forms.html#element-statedef-input-radio-button -->
 	<div class="div_js">
