--- a/html/login.html
+++ b/html/login.html
@@ -75,7 +75,8 @@
 			    	<img src="../images/google.gif" alt="google.gif"><br>
 			    	<label for="" id="l_item">SMS :</label><br>
 			    	<a href="#">SMS validation</a><br>
-			    	<img src="../images/win10.gif" alt="../images/win10.gif">
+			    	<img src="../images/win10.gif" alt="../images/win10.gif"><br>
+			    	<input type="checkbox" form="l_form" checked=""><span>7天内免登录</span>
 			    </div>
 			    <div class="l_button">
 			    	<input class="b__decorate" type="reset" value="reset">
