--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     		<img class="img_diamond" src="images/diamond.gif" alt="diamond.gif">
     	</div>
     	<div class="h_n_link">
-    		<a href="#" class="a_link0">Home :</a><span> >> </span>
+    		<!-- <a href="#" class="a_link0">Home :</a><span> >> </span> -->
+    		<!-- <a href="#" class="a_link0">Home :</a><span> <img src="images/arrow.png" alt=""> </span> -->
+    		<a href="#" class="a_link0">Home :</a><img  class="img_arrow" src="images/arrow.png" alt="">
+    		<!-- <a href="#" class="a_link0">Home :</a><span class="img_arrow"></span> -->
     		<a href="#" class="a_link1">index </a><span>&nbsp;</span>
+    		<!-- &nbsp;  no-break space -->
     	</div>
     	<div class="h_l_link">
     		<a href="#" class="a_link2">login </a><span>&nbsp;</span>
